alamin last push

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13705,6 +13705,11 @@ form.change-pass-form input,
   height: 100%;
   background: #fff;
 }
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .single-vendor-area {
+    padding: 20px;
+  }
+}
 @media only screen and (max-width: 767px) {
   .single-vendor-area {
     padding: 20px;
@@ -13732,6 +13737,11 @@ form.change-pass-form input,
 .single-vendor-area .title {
   font-size: 24px;
   margin-bottom: 15px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .single-vendor-area .title {
+    font-size: 20px;
+  }
 }
 .single-vendor-area .title span {
   padding: 4px 12px;
@@ -13846,7 +13856,6 @@ form.change-pass-form input,
 }
 .vendor-list-main-wrapper tbody tr td .rts-btn {
   text-decoration: none;
-  margin-left: auto;
 }
 .vendor-list-main-wrapper tbody tr td .open {
   padding: 5px 10px;
@@ -14208,18 +14217,18 @@ form.change-pass-form input,
 #example_wrapper .paginate_button.current {
   background: var(--color-primary) !important;
   color: #fff !important;
-  border: 1px solid var(--color-primary);
+  border: 1px solid var(--color-primary) !important;
 }
 #example_wrapper .paginate_button:hover {
   background: var(--color-primary) !important;
-  color: #fff;
-  border: 1px solid var(--color-primary);
+  color: #fff !important;
+  border: 1px solid var(--color-primary) !important;
 }
 #example_wrapper .paginate_button {
   background: #fff !important;
   color: var(--color-primary);
-  border: 1px solid #fff;
-  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1019607843);
+  border: 1px solid #fff !important;
+  border: 1px solid #f1f1f1 !important;
 }
 
 table.dataTable.no-footer {
@@ -14238,6 +14247,119 @@ table.dataTable.no-footer {
 }
 .table-transixtion #example_wrapper #example_paginate {
   padding: 20px 0 !important;
+}
+
+table.dataTable thead .sorting {
+  position: relative;
+  background-image: none;
+  max-width: max-content;
+}
+table.dataTable thead .sorting::after {
+  content: "";
+  right: 0;
+  position: absolute;
+  background-image: url(../images/form/01.png);
+  height: 19px;
+  width: 19px;
+  background-repeat: no-repeat;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(132deg) brightness(103%) contrast(103%);
+}
+
+table.dataTable thead .sorting_asc {
+  position: relative;
+  background-image: none;
+  max-width: max-content;
+}
+table.dataTable thead .sorting_asc::after {
+  content: "";
+  right: 0;
+  position: absolute;
+  background-image: url(../images/form/01.png);
+  height: 19px;
+  width: 19px;
+  background-repeat: no-repeat;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(132deg) brightness(103%) contrast(103%);
+}
+
+table.dataTable thead .sorting_asc {
+  background-image: none !important;
+}
+
+table.dataTable thead .sorting_desc {
+  background-image: none !important;
+  position: relative;
+  background-image: none;
+  max-width: max-content;
+}
+table.dataTable thead .sorting_desc::after {
+  content: "";
+  right: 0;
+  position: absolute;
+  background-image: url(../images/form/02.png);
+  height: 19px;
+  width: 19px;
+  background-repeat: no-repeat;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(132deg) brightness(103%) contrast(103%);
+}
+
+.order-page .vendor-list-main-wrapper tbody tr td:nth-child(2) {
+  width: 17%;
+}
+
+.between-stock-table.statrus {
+  position: relative;
+}
+.between-stock-table.statrus .action-edit-deleate {
+  position: absolute;
+  top: 52%;
+  right: 24px;
+  border: 1px solid #f1f1f1;
+  z-index: 10;
+  display: none;
+  border-radius: 5px;
+}
+.between-stock-table.statrus .action-edit-deleate span {
+  display: block;
+  max-width: 100%;
+  padding: 17px;
+  background: #fff;
+  border-bottom: 1px solid #f1f1f1;
+  font-weight: 500;
+  color: #74787C;
+  cursor: pointer;
+}
+.between-stock-table.statrus .action-edit-deleate span:last-child {
+  border: none;
+}
+
+.between-stock-table.action {
+  position: relative;
+}
+.between-stock-table.action .action-edit-deleate {
+  position: absolute;
+  top: 52%;
+  right: 24px;
+  border: 1px solid #f1f1f1;
+  z-index: 10;
+  display: none;
+  border-radius: 5px;
+}
+.between-stock-table.action .action-edit-deleate span {
+  display: block;
+  max-width: 100%;
+  padding: 17px;
+  background: #fff;
+  border-bottom: 1px solid #f1f1f1;
+  font-weight: 500;
+  color: #74787C;
+  cursor: pointer;
+}
+.between-stock-table.action .action-edit-deleate span:last-child {
+  border: none;
+}
+
+.p-d-page .vendor-list-main-wrapper tbody tr td:nth-child(2) {
+  width: 15%;
 }
 
 .rts-btn {
@@ -15182,6 +15304,19 @@ table.dataTable.no-footer {
   align-items: center;
   justify-content: space-between;
 }
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .top-product-area-start .between-area-top {
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .top-product-area-start .between-area-top {
+    flex-direction: column;
+    gap: 15px;
+    align-items: flex-start;
+  }
+}
 .top-product-area-start .between-area-top .title {
   font-size: 20px;
   margin-bottom: 10px;
@@ -15212,11 +15347,44 @@ table.dataTable.no-footer {
   font-weight: 600;
   color: #2C3C28;
 }
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .product-top-area-single .image-area .information p {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .product-top-area-single .image-area .information p {
+    font-size: 14px;
+  }
+}
+.product-top-area-single .image-area .information span {
+  min-width: max-content;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .product-top-area-single .image-area .information span {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .product-top-area-single .image-area .information span {
+    font-size: 14px;
+  }
+}
 .product-top-area-single > div p {
   margin-bottom: 10px;
   font-weight: 600;
   color: #2C3C28;
   min-width: max-content;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+  .product-top-area-single > div p {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .product-top-area-single > div p {
+    font-size: 14px;
+  }
 }
 .product-top-area-single .coupon-code,
 .product-top-area-single .logo,
@@ -16297,14 +16465,19 @@ edit .quantity-edit button {
   margin-top: 15px;
   gap: 40px;
 }
+@media only screen and (min-width: 1600px) and (max-width: 1919px) {
+  .single-over-fiew-card .bottom {
+    gap: 15px;
+  }
+}
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
   .single-over-fiew-card .bottom {
     gap: 15px;
   }
 }
-@media only screen and (min-width: 1600px) and (max-width: 1919px) {
+@media only screen and (max-width: 1199px) {
   .single-over-fiew-card .bottom {
-    gap: 15px;
+    gap: 5px;
   }
 }
 .single-over-fiew-card .bottom .title {
@@ -16354,5 +16527,10 @@ edit .quantity-edit button {
 }
 .single-over-fiew-card .bottom .right-primary .increase span {
   color: var(--color-primary);
+}
+@media only screen and (max-width: 1199px) {
+  .single-over-fiew-card .bottom .right-primary img {
+    max-width: 40px;
+  }
 }
 /*# sourceMappingURL=../maps/style.css.map */
