--- a/assets/scss/elements/_order-details.scss
+++ b/assets/scss/elements/_order-details.scss
@@ -112,11 +112,14 @@
         align-items: center;
         margin-top: 15px;
         gap: 40px;
+        @media #{$extra-device} {
+            gap: 15px;
+        }
         @media #{$laptop-device} {
             gap: 15px;
         }
-        @media #{$extra-device} {
-            gap: 15px;
+        @media #{$smlg-device} {
+            gap: 5px;
         }
         .title{
             font-size: 38px;
@@ -155,6 +158,11 @@
                 }
                 span{
                     color: var(--color-primary);
+                }
+            }
+            img{
+                @media #{$smlg-device} {
+                    max-width: 40px;
                 }
             }
         }
