--- a/assets/scss/elements/_vendor.scss
+++ b/assets/scss/elements/_vendor.scss
@@ -203,6 +203,11 @@
     }
 }
 
+.vendor-list-p .vendor-list-main-wrapper tbody tr td .rts-btn {
+    text-decoration: none;
+    margin-left: auto;
+}
+
 .vendor-banner-left{
     background: #2C3C28;
     border-radius: 6px;
@@ -341,6 +346,10 @@
         right: 50px;
         bottom: 0;
         height: 100%;
+        @media #{$smlg-device} {
+            max-width: 29%;
+            height: auto;
+        }
         @media #{$md-layout} {
             display: none;
         }
