--- a/assets/scss/elements/_profile-setting.scss
+++ b/assets/scss/elements/_profile-setting.scss
@@ -68,6 +68,7 @@
                 font-weight: 500;
                 color: #fff;
                 display: block;
+                min-width: max-content;
                 &.active{
                     color: #fff !important;
                     background: #6DA432 !important;
