--- a/assets/scss/elements/_vendor.scss
+++ b/assets/scss/elements/_vendor.scss
@@ -641,7 +641,7 @@ table.dataTable thead .sorting_desc {
 }
 
 
-.between-stock-table.statrus{
+.between-stock-table.statrusts{
     position: relative;
     .action-edit-deleate{
         position: absolute;
