--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,6 +73,7 @@
 @import'elements/search-input';
 @import'elements/backto-top';
 @import'elements/registration';
+@import'elements/brand';
 @import'elements/order-details';
 
 
