--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13809,6 +13809,11 @@ form.change-pass-form input,
     width: 1000px;
   }
 }
+@media only screen and (max-width: 479px) {
+  .vendor-list-main-wrapper {
+    padding: 6px;
+  }
+}
 
 .vendor-list-main-wrapper thead {
   border: none;
@@ -14268,7 +14273,7 @@ table.dataTable thead .sorting {
 }
 table.dataTable thead .sorting::after {
   content: "";
-  right: 0;
+  right: auto;
   position: absolute;
   background-image: url(../images/form/01.png);
   height: 19px;
@@ -14284,7 +14289,7 @@ table.dataTable thead .sorting_asc {
 }
 table.dataTable thead .sorting_asc::after {
   content: "";
-  right: 0;
+  right: auto;
   position: absolute;
   background-image: url(../images/form/01.png);
   height: 19px;
@@ -14333,15 +14338,20 @@ table.dataTable thead .sorting_desc::after {
 .between-stock-table.statrusts .action-edit-deleate span {
   display: block;
   max-width: 100%;
-  padding: 17px;
+  padding: 17px 25px;
   background: #fff;
   border-bottom: 1px solid #f1f1f1;
   font-weight: 500;
   color: #74787C;
   cursor: pointer;
+  transition: 0.3s;
 }
 .between-stock-table.statrusts .action-edit-deleate span:last-child {
   border: none;
+}
+.between-stock-table.statrusts .action-edit-deleate span:hover {
+  background: var(--color-primary);
+  color: #fff;
 }
 
 .between-stock-table.action {
@@ -14365,9 +14375,14 @@ table.dataTable thead .sorting_desc::after {
   font-weight: 500;
   color: #74787C;
   cursor: pointer;
+  transition: 0.3s;
 }
 .between-stock-table.action .action-edit-deleate span:last-child {
   border: none;
+}
+.between-stock-table.action .action-edit-deleate span:hover {
+  background: var(--color-primary);
+  color: #fff;
 }
 
 .p-d-page .vendor-list-main-wrapper tbody tr td:nth-child(2) {
@@ -16365,6 +16380,43 @@ edit .quantity-edit button {
   color: #2C3C28;
   font-weight: 600;
   margin-left: 10px;
+}
+
+.single-brand-area-start {
+  text-align: center;
+  border: 1px solid #f1f1f1;
+  padding: 40px 25px;
+  border-radius: 6px;
+}
+.single-brand-area-start .logo {
+  margin-bottom: 26px;
+}
+.single-brand-area-start .item {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--color-primary);
+}
+
+.rating-table ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 3px;
+  color: #eeae00;
+}
+.rating-table ul li {
+  margin: 0;
+  padding: 0;
+}
+.rating-table ul li i {
+  color: #eeae00;
+  font-size: 14px;
+}
+
+.rating-page tbody tr td:nth-child(2) {
+  width: 15%;
 }
 
 .customers-details-wrapper-one-dashboard {
